# experiments_in_rust

./: README.md  notes.md
add/: Cargo.toml
add/add-one/: Cargo.toml
add/add_two/: Cargo.toml
add/adder/: Cargo.toml
add/adder/src/: main.rs
adder/: Cargo.toml
adder/src/: lib.rs
advanced_traits/src/: lib.rs
automated_tests/: Cargo.toml
automated_tests/src/: adder.rs  greeting.rs  guess.rs  lib.rs  rectangle.rs
automated_tests/tests/: integration_test.rs
branches/: Cargo.toml
branches/src/: main.rs
collections_exercise/: Cargo.toml
collections_exercise/src/: main.rs
collections_hashmap/: Cargo.toml
collections_hashmap/src/: main.rs
collections_string/: Cargo.toml
collections_string/src/: main.rs
collections_vector/: Cargo.toml
collections_vector/src/: main.rs
concurrency/: Cargo.toml
concurrency/src/: main.rs
enums/: Cargo.toml
enums/src/: main.rs
errors_recoverables_with_result/: Cargo.toml
errors_recoverables_with_result/src/: main.rs
errors_to_panic_or_not/: Cargo.toml
errors_unrecoverables_with_panic/: Cargo.toml
functional/: Cargo.toml
functional/src/: cacher.rs  counter.rs  iterator_tests.rs  (+3 more)
generic/: Cargo.toml
generic_trait/: Cargo.toml
generic_types/: Cargo.toml
guessing_game/: Cargo.toml
hello_cargo/: Cargo.toml
lifetime/: Cargo.toml
minigrep/: Cargo.toml
oop/: Cargo.toml
ownership/: Cargo.toml
patterns_and_matching/: Cargo.toml
restaurant/: Cargo.toml
smart_pointers/: Cargo.toml
structs/: Cargo.toml
unsafe_rust/: Cargo.toml
unsafe_rust_2/: Cargo.toml
variables/: Cargo.toml
(+35 files in other folders)
