[package]
name = "adder"
version = "0.1.0"
authors = ["roblebob <robert.koppisch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

add-one = { path = "../add-one" }
add_two = { path = "../add_two" }
rand = "0.8.2" 
